# edu-orb.ru

./: .env_example  .gitignore  LICENSE  README.md  all_endpoints.txt  cookies.json  dailyhomework.txt  eduperiods.txt  login.py  main.py  package-lock.json  pyproject.toml  test.py
diary/: __main__.py  alembic.ini  config.py  cookies.json  main.py  templates.py  test.py  test_2.py  test_aiogram.py  Портал государственных услуг Российской Федерации.html
diary/alembic/: env.py
diary/api/: class_notification.py  classes.py  cookies.json  deeduorb.py  diary.py  exceptions.py  handlers.py  marks.py  marksparser.py  new_diary.py  notification.py  parcipiant.py  parcipiants.py  request.py  response.py  schoolperiods.py  validators.py
diary/api_new/: deeduorb.py  handlers.py  request.py  validators.py
diary/db/: base.py  exceptions.py  sessions.py
diary/handlers/: authorize.py  cancel.py  diary.py  keyboards.py  message.py  start.py  telebot_authorize.py
diary/middlewares/: authorize.py
diary/old_api/: diary.py  exceptions.py  marks.py  notification.py  parcipiants.py  schoolperiods.py
diary/selenium_parser/: BaseApp.py  BasePages.py
diary/services/: exceptions.py  files.py  time.py  user.py
diary/telegram/: message.py
diary/templates/: authorized_start.j2  captcha.j2  change_user.j2  choose_user.j2  chose_period.j2  correct_data_question.j2  denied_cancel.j2  diary.j2  help.j2  help_notification.j2  history_notification.j2  incorrect_authorization.j2  incorrect_data.j2  incorrect_date.j2  incorrect_login.j2  incorrect_turnon_notification.j2  incorrent_logout.j2  login.j2  logout.j2  marks.j2  no_current_user_middleware.j2  nolessons.j2  nothing_to_cancel.j2  notification.j2  notification_menu.j2  oauth2.j2  password.j2  schedule.j2  signup.j2  success_authorize.j2  success_cancel.j2  (+8 more)
edu-orb.ru/: 1.json  23.json  main.py  new_main.py  some.txt
trashtempfiles/: login.py
(+66 files in other folders)
