[tool.poetry]
name = "deeduorb"
version = "0.1.0"
description = ""
authors = ["stupidcabbage <vanya@gutche.ru>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "diary"}]

[tool.poetry.dependencies]
python = "3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.12.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
