[tool.poetry]
name = "deeduorb"
version = "0.1.0"
description = ""
authors = ["stupidcabbage <vanya@gutche.ru>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "diary"}]

[tool.poetry.dependencies]
python = "3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.12.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"
aiogram = "^3.1.1"
jinja2 = "^3.1.2"
dateparser = "^1.1.8"
lxml = "^4.9.3"
emoji = "^2.8.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
httplib2 = "^0.22.0"
telebot = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
