[tool.poetry]
name = "edu-orb-ru"
version = "0.1.0"
description = ""
authors = ["stupidcabbage <vanya@gutche.ru>"]
readme = "README.md"
packages = [{include = "edu_orb"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.3"
selenium = "^4.17.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
aiogram = "^3.3.0"
dateparser = "^1.2.0"
lxml = "^5.1.0"
emoji = "^2.10.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
loguru = "^0.7.2"
sentry-sdk = "^1.40.4"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
